--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="es">
 
 <head>
-	<title>Email</title>
+	<title>Email - Parroquia San Agustín</title>
 	<!-- Meta tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,29 +19,30 @@
 		<div class="form-36-mian section-gap">
 			<div class="wrapper">
 				<div class="form-inner-cont">
-					<h3>Login now</h3>
+					<h3>Inicie sesión ahora</h3>
 					<form action="#" method="post" class="signin-form">
-						<div class="form-input">
+						<!-- <div class="form-input">
 							<span class="fa fa-envelope-o" aria-hidden="true"></span> <input type="email" name="email"
 								placeholder="Username" required />
 						</div>
 						<div class="form-input">
 							<span class="fa fa-key" aria-hidden="true"></span> <input type="password" name="password" placeholder="Password"
 								required />
-						</div>
+						</div> -->
 						<div class="login-remember d-grid">
 							<label class="check-remaind">
-								<input type="checkbox">
-								<span class="checkmark"></span>
-								<p class="remember">Remember me</p>
+								<!-- <input type="checkbox">
+								<span class="checkmark"></span> -->
+								<!-- <p class="remember">Recordar</p> -->
 							</label>
-							<button class="btn theme-button">Login</button>
+							<!-- <button class="btn theme-button">Ingresar</button> -->
+							<a href="http://mail.parroquiasanagustin.co" class="btn theme-button" > Ingresar</a>
 						</div>
-						<div class="new-signup">
+						<!-- <div class="new-signup">
 							<a href="#reload" class="signuplink">Forgot password?</a>
-						</div>
+						</div> -->
 					</form>
-					<div class="social-icons">
+					<!-- <div class="social-icons">
 						<p class="continue"><span>Or</span></p>
 						<div class="social-login">
 							<a href="#facebook">
@@ -56,13 +57,13 @@
 								</div>
 							</a>
 						</div>
-					</div>
-					<p class="signup">Don’t have an account? <a href="#signup.html" class="signuplink">Iniciar Seccion</a></p>
+					</div> -->
+					<!-- <p class="signup">¿No tienes una cuenta? <a href="#signup.html" class="signuplink">Iniciar Seccion</a></p> -->
 				</div>
 
 				<!-- copyright -->
 				<div class="copy-right">
-					<p>© 2020 Active Login Form. All rights reserved | Design by <a href="http://github.com/michaeldanielm"
+					<p>© 2020 Todos los Derechos reservados. | Diseñado Por:<a href="http://github.com/michaeldanielm"
 							target="_blank">Michael Daniel Murillo López</a></p>
 				</div>
 				<!-- //copyright -->
